--- a/index.html
+++ b/index.html
@@ -11,55 +11,63 @@
       crossorigin="anonymous"
     />
     <title>SENAI - NOTAS</title>
-    <link rel="stylesheet" type="text/css" href="reset.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-
   <body onload="desenharTabela()">
     <table class="table">
       <thead>
-        <tr>
+        <tr id="linha0">
           <th scope="col">#</th>
           <th scope="col">Nome</th>
           <th scope="col">Nota 1</th>
           <th scope="col">Nota 2</th>
           <th scope="col">Nota 3</th>
           <th scope="col">Nota 4</th>
-          <th scope="col">Média</th>
+          <th scope="col" id="media0">Média</th>
           <th scope="col">Situação</th>
         </tr>
       </thead>
       <tbody id="tabela"></tbody>
     </table>
+    <button onclick="calcular()" type="button" class="btn btn-secondary btn-lg">
+      Verificar
+    </button>
     <button
-      onclick="calcular()"
+      id="nvAluno"
+      onclick="adicionarAluno()"
       type="button"
-      class="btn btn-secondary btn-lg btn-verificar"
+      class="btn btn-secondary btn-lg"
     >
-      Verificar Médias
+      Adicionar aluno
     </button>
-
-    <!-- <button
-      onclick="desenharTabela()"
-      type="button"
-      class="btn btn-primary btn-lg btn-add-aluno"
-    >
-      Adicionar Aluno
-    </button> -->
     <button
-      onclick="addAluno()"
+      id="exAluno"
+      onclick="deletarAluno()"
       type="button"
-      class="btn btn-primary btn-lg btn-add-aluno"
+      class="btn btn-secondary btn-lg"
     >
-      Adicionar Aluno
+      Excluir aluno
     </button>
-    <!-- <button type="button" class="btn btn-info btn-lg btn-add-coluna">
-      Adicionar Coluna
+    <button
+      id="nvNota"
+      onclick="criarNota()"
+      type="button"
+      class="btn btn-secondary btn-lg"
+    >
+      Adicionar nota
     </button>
-    <button class="btn btn-danger btn-sm btn-delete-coluna">
-      Deletar Nota
-    </button> -->
-
-    <script src="Script.js"></script>
+    <button
+      id="exNota"
+      onclick="deletarNota()"
+      type="button"
+      class="btn btn-secondary btn-lg"
+    >
+      Excluir nota
+    </button>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
   </body>
 </html>
